[MODORDERS-899] - changed collect(Collectors.toList()) to toList()